--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Brackeys Jam 2022/Packages/manifest.json
+Brackeys Jam 2022/ProjectSettings/ProjectVersion.txt
+Brackeys Jam 2022/Packages/packages-lock.json
