--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 Brackeys Jam 2022/Packages/manifest.json
 Brackeys Jam 2022/ProjectSettings/ProjectVersion.txt
 Brackeys Jam 2022/Packages/packages-lock.json
+Brackeys Jam 2022/Assets/Art/basepixelart.png~
